# Recuperaci-n_Informaci-n

./: README.md  pyproject.toml
Tarea1/: practica1.nim  practica1.py  pyproject.toml  queries.FRQ
Tarea2/: frequencies.csv  practica2.py
Tarea3/: practica3.py
Tarea4/: practica4.py
freq/: documents.FRQ  queries.FRQ
result/: retrieved_documents-GloVe.REL  retrieved_documents.REL  retrieved_documents_rocchio.REL
