[tool.poetry]
name = "recuperaci-n-informaci-n"
version = "0.1.0"
description = "Repositorio para proyectos de poetry"
authors = ["Crag <ogeidca49@gmail.com>"]
license = "MiT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
