[tool.poetry]
name = "tarea1"
version = "0.1.0"
description = "Procesar \"time\" para un sistema de recuperación de información"
authors = ["Crag <ogeidca49@gmail.com>"]
license = "Mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
